Nosotros seo img

--- a/newHTML/nosotros.html
+++ b/newHTML/nosotros.html
@@ -226,7 +226,7 @@ fluo.com.mx
             </div>
             <h2>Habanero</h2>
             <p>El mood ideal para salir de fiesta y <br> conocer nuevos lugares, personas <br> y experiencias.</p>
-            <img class="iconMore unrotateIcon" src="img/icons/moreHover.svg" alt="" width="25">
+            <img class="iconMore unrotateIcon" src="img/icons/moreHover.svg" width="25">
           </div>
         </li>
         <li id="lastMobile" style="background:#cc7832;">
