nosotros href/ misión vision

--- a/newHTML/nosotros.html
+++ b/newHTML/nosotros.html
@@ -109,7 +109,7 @@ fluo.com.mx
       <img class="coverHeader hideOpacity" src="img/logotipo-yot-color.svg" alt="Logotipo Yot Mx" width="200">
       <p class="coverHeader hideOpacity">Somos una empresa 100% mexicana dedicada a ofrecer botanas innovadoras de calidad. Nuestro foco son jóvenes que buscan opciones diferentes y accesibles con sabores novedosos.</p>
     </header>
-    <ul class="coverHeader hideOpacity">
+    <ul>
       <li style="background-image:url('img/nosotros-mision.jpg');">
         <h2>Misión</h2>
         <p>Ofrecer botanas innovadoras y diversas, al alcance de los mexicanos y sus estilos de vida.</p>
@@ -127,107 +127,128 @@ fluo.com.mx
         <!-- Sal de Mar -->
         <li style="background:#fdc339;" onmouseover="overNosotros('over', 0);" onmouseout="overNosotros('out', 0);">
           <img class="imgProductoNos zoomOutImg"  src="img/nosotros/0.png" alt="Potet Sal de Mar" width="230">
-          <div class="overInfo" style="background: rgba(254, 171, 59, 0.5); opacity: 0;">
-            <div class="productosBullets">
-              <img src="img/bulletP1.svg">
+          <a href="#">
+            <div class="overInfo" style="background: rgba(254, 171, 59, 0.5); opacity: 0;">
+              <div class="productosBullets">
+                <img src="img/bulletP1.svg">
+              </div>
+              <h2 style="color:#000;">Sal de Mar</h2>
+              <p style="color:#000;">Perfecto empujón para cambiar <br>las perspectivas cotidianas.</p>
+              <img class="iconMore unrotateIcon" src="img/icons/moreHoverBlack.svg" width="25">
             </div>
-            <h2 style="color:#000;">Sal de Mar</h2>
-            <p style="color:#000;">Perfecto empujón para cambiar <br>las perspectivas cotidianas.</p>
-            <img class="iconMore unrotateIcon" src="img/icons/moreHoverBlack.svg" width="25">
-          </div>
+          </a>
         </li>
         <!-- Habanero -->
         <li style="background:#f48f3d;" onmouseover="overNosotros('over', 1);" onmouseout="overNosotros('out', 1);">
           <img class="imgProductoNos zoomOutImg" src="img/nosotros/1.png" alt="Potet Habanero" width="230">
-          <div class="overInfo" style="background: rgba(207, 68, 58, 0.5); opacity: 0;">
-            <div class="productosBullets">
-            <img src="img/bulletP2.svg">
-          </div>
-            <h2 style="color:#000;">Habanero</h2>
-            <p style="color:#000;">Perfecto empujón para cambiar <br> las perspectivas cotidianas.</p>
-            <img class="iconMore unrotateIcon" src="img/icons/moreHoverBlack.svg" width="25">
-          </div>
+          <a href="">
+            <div class="overInfo" style="background: rgba(207, 68, 58, 0.5); opacity: 0;">
+              <div class="productosBullets">
+              <img src="img/bulletP2.svg">
+            </div>
+              <h2 style="color:#000;">Habanero</h2>
+              <p style="color:#000;">Perfecto empujón para cambiar <br> las perspectivas cotidianas.</p>
+              <img class="iconMore unrotateIcon" src="img/icons/moreHoverBlack.svg" width="25">
+            </div>
+          </a>
         </li>
         <!-- Chile de árbol -->
         <li style="background:#cf3a44;" onmouseover="overNosotros('over', 2);" onmouseout="overNosotros('out', 2);">
           <img class="imgProductoNos zoomOutImg" src="img/nosotros/2.png" alt="Potet Chile de Árbol" width="230">
-          <div class="overInfo" style="background: rgba(253, 193, 57, 0.5); opacity: 0;">
-        	<div class="productosBullets">
-        		<img src="img/bulletP3.svg">
-        	</div>
-        	<h2 style="color:#000;">Chile de árbol</h2>
-        	<p style="color:#000;">Perfecto empujón para cambiar <br> las perspectivas cotidianas.</p>
-        	<img class="iconMore unrotateIcon" src="img/icons/moreHoverBlack.svg" width="25">
-        </div>
+          <a href="">
+            <div class="overInfo" style="background: rgba(253, 193, 57, 0.5); opacity: 0;">
+          	<div class="productosBullets">
+          		<img src="img/bulletP3.svg">
+          	</div>
+          	<h2 style="color:#000;">Chile de árbol</h2>
+          	<p style="color:#000;">Perfecto empujón para cambiar <br> las perspectivas cotidianas.</p>
+          	<img class="iconMore unrotateIcon" src="img/icons/moreHoverBlack.svg" width="25">
+          </div>
+          </a>
         </li>
-        <!-- Chile de árbol -->
+        <!-- Camote y Yuca -->
         <li style="background:#be2872;" onmouseover="overNosotros('over', 3);" onmouseout="overNosotros('out', 3);">
           <img class="imgProductoNos zoomOutImg" src="img/nosotros/3.png" alt="Sot Camote y Yuca" width="230">
-          <div class="overInfo" style="background: rgba(156, 50, 59, 0.5); opacity: 0;">
-            <div class="productosBullets">
-              <img src="img/bulletS1.svg">
+          <a href="">
+            <div class="overInfo" style="background: rgba(156, 50, 59, 0.5); opacity: 0;">
+              <div class="productosBullets">
+                <img src="img/bulletS1.svg">
+              </div>
+              <h2>Camote y Yuca</h2>
+              <p>Ideal para disfrutar una comida <br> con amigos y personas cercanas.</p>
+              <img class="iconMore unrotateIcon" src="img/icons/moreHover.svg" width="25">
             </div>
-            <h2>Camote y Yuca</h2>
-            <p>Ideal para disfrutar una comida <br> con amigos y personas cercanas.</p>
-            <img class="iconMore unrotateIcon" src="img/icons/moreHover.svg" width="25">
-          </div>
+          </a>
         </li>
         <!-- Yuca -->
         <li style="background:#9c323b;" onmouseover="overNosotros('over', 4);" onmouseout="overNosotros('out', 4);">
           <img class="imgProductoNos zoomOutImg" src="img/nosotros/4.png" alt="Sot Yuca" width="230">
-          <div class="overInfo" style="background: rgba(187, 148, 64, 0.5); opacity: 0;">
-          <div class="productosBullets">
-          <img src="img/bulletS3.svg">
-          </div>
-          <h2>Yuca</h2>
-          <p>El mood ideal para salir de fiesta y <br> conocer nuevos lugares, personas <br> y experiencias.</p>
-          <img class="iconMore unrotateIcon" src="img/icons/moreHover.svg" width="25">
-          </div>
+          <a href="">
+            <div class="overInfo" style="background: rgba(187, 148, 64, 0.5); opacity: 0;">
+              <div class="productosBullets">
+                <img src="img/bulletS3.svg">
+              </div>
+              <h2>Yuca</h2>
+              <p>El mood ideal para salir de fiesta y <br> conocer nuevos lugares, personas <br> y experiencias.</p>
+              <img class="iconMore unrotateIcon" src="img/icons/moreHover.svg" width="25">
+            </div>
+          </a>
         </li>
-        <!-- Sal de mar -->
+        <!-- Camote -->
         <li style="background:#bb9440;" onmouseover="overNosotros('over', 5);" onmouseout="overNosotros('out', 5);">
           <img class="imgProductoNos zoomOutImg" src="img/nosotros/5.png" alt="Sot Camote" width="230">
-          <div class="overInfo" style="background: rgba(190, 40, 114, 0.5); opacity: 0;">
-            <div class="productosBullets">
-              <img src="img/bulletS2.svg">
+          <a href="">
+            <div class="overInfo" style="background: rgba(190, 40, 114, 0.5); opacity: 0;">
+              <div class="productosBullets">
+                <img src="img/bulletS2.svg">
+              </div>
+              <h2>Camote</h2>
+              <p>Perfecto empujón para cambiar <br> las perspectivas cotidianas.</p>
+              <img class="iconMore unrotateIcon" src="img/icons/moreHover.svg" width="25">
             </div>
-            <h2>Camote</h2>
-            <p>Perfecto empujón para cambiar <br> las perspectivas cotidianas.</p>
-            <img class="iconMore unrotateIcon" src="img/icons/moreHover.svg" width="25">
-          </div>
+          </a>
         </li>
+        <!-- Barbecue -->
         <li style="background:#47100f;" onmouseover="overNosotros('over', 6);" onmouseout="overNosotros('out', 6);">
           <img class="imgProductoNos zoomOutImg" src="img/nosotros/6.png" alt="Tlayolis Barbecue" width="230">
-          <div class="overInfo" style="background: rgba(186, 113, 50, 0.5); opacity: 0;">
-            <div class="productosBullets">
-              <img src="img/bulletT3.svg">
+          <a href="#">
+            <div class="overInfo" style="background: rgba(186, 113, 50, 0.5); opacity: 0;">
+              <div class="productosBullets">
+                <img src="img/bulletT3.svg">
+              </div>
+              <h2>Barbecue</h2>
+              <p>Ideal para disfrutar una comida <br> con amigos y personas cercanas.</p>
+              <img class="iconMore unrotateIcon" src="img/icons/moreHover.svg" width="25">
             </div>
-            <h2>Barbecue</h2>
-            <p>Ideal para disfrutar una comida <br> con amigos y personas cercanas.</p>
-            <img class="iconMore unrotateIcon" src="img/icons/moreHover.svg" width="25">
-          </div>
+          </a>
         </li>
+        <!-- Jalapeño -->
         <li style="background:#208245;" onmouseover="overNosotros('over', 7);" onmouseout="overNosotros('out', 7);">
           <img class="imgProductoNos zoomOutImg" src="img/nosotros/7.png" alt="Tlayolis Jalapeño" width="230">
+          <a href="#">
             <div class="overInfo" style="background: rgba(71, 16, 15, 0.5); opacity: 0;">
-            <div class="productosBullets">
-              <img src="img/bulletT1.svg">
+              <div class="productosBullets">
+                <img src="img/bulletT1.svg">
+              </div>
+              <h2>Jalapeño</h2>
+              <p>El perfecto empujón para cambiar <br> las perspectivas cotidianas.</p>
+              <img class="iconMore unrotateIcon" src="img/icons/moreHover.svg" width="25">
             </div>
-            <h2>Jalapeño</h2>
-            <p>El perfecto empujón para cambiar <br> las perspectivas cotidianas.</p>
-            <img class="iconMore unrotateIcon" src="img/icons/moreHover.svg" width="25">
-          </div>
+          </a>
         </li>
+        <!-- Habanero -->
         <li style="background:#ba7132;" onmouseover="overNosotros('over', 8);" onmouseout="overNosotros('out', 8);">
           <img class="imgProductoNos zoomOutImg" src="img/nosotros/8.png" alt="Tlayolis Habanero" width="230">
-          <div class="overInfo" style="background: rgba(32, 130, 69, 0.5); opacity: 0;">
-            <div class="productosBullets">
-              <img src="img/bulletT2.svg">
+          <a href="#">
+            <div class="overInfo" style="background: rgba(32, 130, 69, 0.5); opacity: 0;">
+              <div class="productosBullets">
+                <img src="img/bulletT2.svg">
+              </div>
+              <h2>Habanero</h2>
+              <p>El mood ideal para salir de fiesta y <br> conocer nuevos lugares, personas <br> y experiencias.</p>
+              <img class="iconMore unrotateIcon" src="img/icons/moreHover.svg" width="25">
             </div>
-            <h2>Habanero</h2>
-            <p>El mood ideal para salir de fiesta y <br> conocer nuevos lugares, personas <br> y experiencias.</p>
-            <img class="iconMore unrotateIcon" src="img/icons/moreHover.svg" width="25">
-          </div>
+          </a>
         </li>
         <li id="lastMobile" style="background:#cc7832;">
         </li>
