--- a/newHTML/nosotros.html
+++ b/newHTML/nosotros.html
@@ -127,7 +127,7 @@ fluo.com.mx
         <!-- Sal de Mar -->
         <li style="background:#fdc339;" onmouseover="overNosotros('over', 0);" onmouseout="overNosotros('out', 0);">
           <img class="imgProductoNos zoomOutImg"  src="img/nosotros/0.png" alt="Potet Sal de Mar" width="230">
-          <a href="#">
+          <a href="section-potet.html?producto=1">
             <div class="overInfo" style="background: rgba(254, 171, 59, 0.5); opacity: 0;">
               <div class="productosBullets">
                 <img src="img/bulletP1.svg">
@@ -141,7 +141,7 @@ fluo.com.mx
         <!-- Habanero -->
         <li style="background:#f48f3d;" onmouseover="overNosotros('over', 1);" onmouseout="overNosotros('out', 1);">
           <img class="imgProductoNos zoomOutImg" src="img/nosotros/1.png" alt="Potet Habanero" width="230">
-          <a href="">
+          <a href="section-potet.html?producto=2">
             <div class="overInfo" style="background: rgba(207, 68, 58, 0.5); opacity: 0;">
               <div class="productosBullets">
               <img src="img/bulletP2.svg">
@@ -155,7 +155,7 @@ fluo.com.mx
         <!-- Chile de árbol -->
         <li style="background:#cf3a44;" onmouseover="overNosotros('over', 2);" onmouseout="overNosotros('out', 2);">
           <img class="imgProductoNos zoomOutImg" src="img/nosotros/2.png" alt="Potet Chile de Árbol" width="230">
-          <a href="">
+          <a href="section-potet.html?producto=3">
             <div class="overInfo" style="background: rgba(253, 193, 57, 0.5); opacity: 0;">
           	<div class="productosBullets">
           		<img src="img/bulletP3.svg">
@@ -169,7 +169,7 @@ fluo.com.mx
         <!-- Camote y Yuca -->
         <li style="background:#be2872;" onmouseover="overNosotros('over', 3);" onmouseout="overNosotros('out', 3);">
           <img class="imgProductoNos zoomOutImg" src="img/nosotros/3.png" alt="Sot Camote y Yuca" width="230">
-          <a href="">
+          <a href="section-sot.html?producto=3">
             <div class="overInfo" style="background: rgba(156, 50, 59, 0.5); opacity: 0;">
               <div class="productosBullets">
                 <img src="img/bulletS1.svg">
@@ -183,7 +183,7 @@ fluo.com.mx
         <!-- Yuca -->
         <li style="background:#9c323b;" onmouseover="overNosotros('over', 4);" onmouseout="overNosotros('out', 4);">
           <img class="imgProductoNos zoomOutImg" src="img/nosotros/4.png" alt="Sot Yuca" width="230">
-          <a href="">
+          <a href="section-sot.html?producto=2">
             <div class="overInfo" style="background: rgba(187, 148, 64, 0.5); opacity: 0;">
               <div class="productosBullets">
                 <img src="img/bulletS3.svg">
@@ -197,7 +197,7 @@ fluo.com.mx
         <!-- Camote -->
         <li style="background:#bb9440;" onmouseover="overNosotros('over', 5);" onmouseout="overNosotros('out', 5);">
           <img class="imgProductoNos zoomOutImg" src="img/nosotros/5.png" alt="Sot Camote" width="230">
-          <a href="">
+          <a href="section-sot.html?producto=1">
             <div class="overInfo" style="background: rgba(190, 40, 114, 0.5); opacity: 0;">
               <div class="productosBullets">
                 <img src="img/bulletS2.svg">
@@ -211,7 +211,7 @@ fluo.com.mx
         <!-- Barbecue -->
         <li style="background:#47100f;" onmouseover="overNosotros('over', 6);" onmouseout="overNosotros('out', 6);">
           <img class="imgProductoNos zoomOutImg" src="img/nosotros/6.png" alt="Tlayolis Barbecue" width="230">
-          <a href="#">
+          <a href="section-tlayolis.html?producto=3">
             <div class="overInfo" style="background: rgba(186, 113, 50, 0.5); opacity: 0;">
               <div class="productosBullets">
                 <img src="img/bulletT3.svg">
@@ -225,7 +225,7 @@ fluo.com.mx
         <!-- Jalapeño -->
         <li style="background:#208245;" onmouseover="overNosotros('over', 7);" onmouseout="overNosotros('out', 7);">
           <img class="imgProductoNos zoomOutImg" src="img/nosotros/7.png" alt="Tlayolis Jalapeño" width="230">
-          <a href="#">
+          <a href="section-tlayolis.html?producto=1">
             <div class="overInfo" style="background: rgba(71, 16, 15, 0.5); opacity: 0;">
               <div class="productosBullets">
                 <img src="img/bulletT1.svg">
@@ -239,7 +239,7 @@ fluo.com.mx
         <!-- Habanero -->
         <li style="background:#ba7132;" onmouseover="overNosotros('over', 8);" onmouseout="overNosotros('out', 8);">
           <img class="imgProductoNos zoomOutImg" src="img/nosotros/8.png" alt="Tlayolis Habanero" width="230">
-          <a href="#">
+          <a href="section-tlayolis.html?producto=2">
             <div class="overInfo" style="background: rgba(32, 130, 69, 0.5); opacity: 0;">
               <div class="productosBullets">
                 <img src="img/bulletT2.svg">
