--- a/newHTML/section-potet.html
+++ b/newHTML/section-potet.html
@@ -179,6 +179,13 @@ fluo.com.mx
   </section>
   <nav id="bullets">
     <ul>
+      <li><p class="textBullet">Potet</p></li>
+      <li><p class="textBullet">Sal de mar</p></li>
+      <li><p class="textBullet">Habanero</p></li>
+      <li><p class="textBullet">Chile de árbol</p></li>
+      <li><p class="textBullet">Fotos</p></li>
+    </ul>
+    <ul style="width:40px;">
       <li><a role="button" onclick="bulletsProducto(0)"><img onmouseover="changeIcon('over1', 'icons/bullet-', this)" onmouseout="changeIcon('out', 'icons/bullet-', this)" src="img/icons/bullet-out.svg" width="20"></a></li>
       <li><a role="button" onclick="bulletsProducto(1)"><img onmouseover="changeIcon('over2', 'icons/bullet-', this)" onmouseout="changeIcon('out', 'icons/bullet-', this)" src="img/icons/bullet-out.svg" width="20"></a></li>
       <li><a role="button" onclick="bulletsProducto(2)"><img onmouseover="changeIcon('over3', 'icons/bullet-', this)" onmouseout="changeIcon('out', 'icons/bullet-', this)" src="img/icons/bullet-out.svg" width="20"></a></li>
