--- a/newHTML/section-sot.html
+++ b/newHTML/section-sot.html
@@ -179,6 +179,13 @@ fluo.com.mx
   </section>
   <nav id="bullets">
     <ul>
+      <li><p class="textBullet">Sot</p></li>
+      <li><p class="textBullet">Camote</p></li>
+      <li><p class="textBullet">Yuca</p></li>
+      <li><p class="textBullet">Camote y yuca</p></li>
+      <li><p class="textBullet">Fotos</p></li>
+    </ul>
+    <ul id="iconsBullets" style="width:40px;">
       <li><a role="button" onclick="bulletsProducto(0)"><img onmouseover="changeIcon('over1', 'icons/bullet-', this)" onmouseout="changeIcon('out', 'icons/bullet-', this)" src="img/icons/bullet-out.svg" width="20"></a></li>
       <li><a role="button" onclick="bulletsProducto(1)"><img onmouseover="changeIcon('over2', 'icons/bullet-', this)" onmouseout="changeIcon('out', 'icons/bullet-', this)" src="img/icons/bullet-out.svg" width="20"></a></li>
       <li><a role="button" onclick="bulletsProducto(2)"><img onmouseover="changeIcon('over3', 'icons/bullet-', this)" onmouseout="changeIcon('out', 'icons/bullet-', this)" src="img/icons/bullet-out.svg" width="20"></a></li>
