--- a/newHTML/section-potet.html
+++ b/newHTML/section-potet.html
@@ -134,10 +134,10 @@ fluo.com.mx
         <h2 style="color:#000;">Sal de mar</h2>
         <p style="color:#000;">El mood ideal para salir de  esta y conocer nuevos lugares, personas y experiencias</p>
         <div style="background-image:url('img/tablas/pot-1.png');"></div>
-        <ul id="interfaceInner">
+        <!-- <ul id="interfaceInner">
           <li><a role="button" onclick="countsliderProducto('prev')"><img onmouseover="changeIcon('over', 'icons/arrowBlack-', this)" onmouseout="changeIcon('out', 'icons/arrowBlack-', this)" src="img/icons/arrowBlack-out.svg" width="40"></a></li>
           <li><a role="button" onclick="countsliderProducto('next')"><img class="rotIcon" onmouseover="changeIcon('over', 'icons/arrowBlack-', this)" onmouseout="changeIcon('out', 'icons/arrowBlack-', this)" src="img/icons/arrowBlack-out.svg" width="40"></a></li>
-        </ul>
+        </ul> -->
       </div>
     </article>
     <!-- HABANERO -->
@@ -150,10 +150,10 @@ fluo.com.mx
         <h2 style="color:#000;">Habanero</h2>
         <p style="color:#000;">El mood ideal para salir de  esta y conocer nuevos lugares, personas y experiencias.</p>
         <div style="background-image:url('img/tablas/pot-2.png');"></div>
-        <ul id="interfaceInner">
+        <!-- <ul id="interfaceInner">
           <li><a role="button" onclick="countsliderProducto('prev')"><img onmouseover="changeIcon('over', 'icons/arrowBlack-', this)" onmouseout="changeIcon('out', 'icons/arrowBlack-', this)" src="img/icons/arrowBlack-out.svg" width="40"></a></li>
           <li><a role="button" onclick="countsliderProducto('next')"><img class="rotIcon" onmouseover="changeIcon('over', 'icons/arrowBlack-', this)" onmouseout="changeIcon('out', 'icons/arrowBlack-', this)" src="img/icons/arrowBlack-out.svg" width="40"></a></li>
-        </ul>
+        </ul> -->
       </div>
     </article>
     <!-- BBQ -->
@@ -166,10 +166,10 @@ fluo.com.mx
         <h2 style="color:#000;">Chile de árbol</h2>
         <p style="color:#000;">El mood ideal para salir de  esta y conocer nuevos lugares, personas y experiencias.</p>
         <div style="background-image:url('img/tablas/pot-3.png');"></div>
-        <ul id="interfaceInner">
+        <!-- <ul id="interfaceInner">
           <li><a role="button" onclick="countsliderProducto('prev')"><img onmouseover="changeIcon('over', 'icons/arrowBlack-', this)" onmouseout="changeIcon('out', 'icons/arrowBlack-', this)" src="img/icons/arrowBlack-out.svg" width="40"></a></li>
           <li><a role="button" onclick="countsliderProducto('next')"><img class="rotIcon" onmouseover="changeIcon('over', 'icons/arrowBlack-', this)" onmouseout="changeIcon('out', 'icons/arrowBlack-', this)" src="img/icons/arrowBlack-out.svg" width="40"></a></li>
-        </ul>
+        </ul> -->
       </div>
     </article>
     <!-- SLIDER INTERNO -->
