--- a/newHTML/section-sot.html
+++ b/newHTML/section-sot.html
@@ -134,10 +134,10 @@ fluo.com.mx
         <h2>Camote</h2>
         <p>El mood ideal para salir de  esta y conocer nuevos lugares, personas y experiencias.</p>
         <div style="background-image:url('img/tablas/sot-1.png');"></div>
-        <ul id="interfaceInner">
+        <!-- <ul id="interfaceInner">
           <li><a role="button" onclick="countsliderProducto('prev')"><img onmouseover="changeIcon('over', 'icons/arrow-', this)" onmouseout="changeIcon('out', 'icons/arrow-', this)" src="img/icons/arrow-out.svg" width="40"></a></li>
           <li><a role="button" onclick="countsliderProducto('next')"><img class="rotIcon" onmouseover="changeIcon('over', 'icons/arrow-', this)" onmouseout="changeIcon('out', 'icons/arrow-', this)" src="img/icons/arrow-out.svg" width="40"></a></li>
-        </ul>
+        </ul> -->
       </div>
     </article>
     <!-- YUCA -->
@@ -150,10 +150,10 @@ fluo.com.mx
         <h2>Yuca</h2>
         <p>El mood ideal para salir de  esta y conocer nuevos lugares, personas y experiencias.</p>
         <div style="background-image:url('img/tablas/sot-2.png');"></div>
-        <ul id="interfaceInner">
+        <!-- <ul id="interfaceInner">
           <li><a role="button" onclick="countsliderProducto('prev')"><img onmouseover="changeIcon('over', 'icons/arrow-', this)" onmouseout="changeIcon('out', 'icons/arrow-', this)" src="img/icons/arrow-out.svg" width="40"></a></li>
           <li><a role="button" onclick="countsliderProducto('next')"><img class="rotIcon" onmouseover="changeIcon('over', 'icons/arrow-', this)" onmouseout="changeIcon('out', 'icons/arrow-', this)" src="img/icons/arrow-out.svg" width="40"></a></li>
-        </ul>
+        </ul> -->
       </div>
     </article>
     <!-- CAMOTE Y YUCA -->
@@ -166,10 +166,10 @@ fluo.com.mx
         <h2>Camote y yuca</h2>
         <p>El mood ideal para salir de  esta y conocer nuevos lugares, personas y experiencias.</p>
         <div style="background-image:url('img/tablas/sot-3.png');"></div>
-        <ul id="interfaceInner">
+        <!-- <ul id="interfaceInner">
           <li><a role="button" onclick="countsliderProducto('prev')"><img onmouseover="changeIcon('over', 'icons/arrow-', this)" onmouseout="changeIcon('out', 'icons/arrow-', this)" src="img/icons/arrow-out.svg" width="40"></a></li>
           <li><a role="button" onclick="countsliderProducto('next')"><img class="rotIcon" onmouseover="changeIcon('over', 'icons/arrow-', this)" onmouseout="changeIcon('out', 'icons/arrow-', this)" src="img/icons/arrow-out.svg" width="40"></a></li>
-        </ul>
+        </ul> -->
       </div>
     </article>
     <!-- SLIDER INTERNO -->
@@ -177,6 +177,12 @@ fluo.com.mx
      <div id="initSlider1"></div>
    </article>
   </section>
+  <nav id="arrows">
+    <span>
+      <a role="button" onclick="countsliderProducto('prev')"><img onmouseover="changeIcon('over', 'icons/arrow-', this)" onmouseout="changeIcon('out', 'icons/arrow-', this)" src="img/icons/arrow-out.svg" width="40"></a>
+      <a role="button" onclick="countsliderProducto('next')"><img class="rotIcon" onmouseover="changeIcon('over', 'icons/arrow-', this)" onmouseout="changeIcon('out', 'icons/arrow-', this)" src="img/icons/arrow-out.svg" width="40"></a>
+    </span>
+  </nav>
   <nav id="bullets">
     <ul>
       <li><p class="textBullet">Sot</p></li>
