--- a/section-potet.html
+++ b/section-potet.html
@@ -161,12 +161,13 @@ fluo.com.mx
     <!-- SLIDER INTERNO -->
    <article id="wrapSlider" class="hideDisplay">
      <div id="initSlider1"></div>
+     <a role="button" onclick="evSliderMobPop('open');">Click para ver imágenes</a>
    </article>
   </section>
   <nav id="arrows">
     <span>
-      <a role="button" onclick="countsliderProducto('prev')"><img onmouseover="changeIcon('over', 'icons/arrow-', this)" onmouseout="changeIcon('out', 'icons/arrow-', this)" src="img/icons/arrow-out.svg" width="40"></a>
-      <a role="button" onclick="countsliderProducto('next')"><img class="rotIcon" onmouseover="changeIcon('over', 'icons/arrow-', this)" onmouseout="changeIcon('out', 'icons/arrow-', this)" src="img/icons/arrow-out.svg" width="40"></a>
+      <a role="button" onclick="countsliderProducto('prev')"><img onmouseover="changeIcon('over', 'icons/arrow-', this)" onmouseout="changeIcon('out', 'icons/arrow-', this)" src="img/icons/arrow-out.svg" width="35"></a>
+      <a role="button" onclick="countsliderProducto('next')"><img class="rotIcon" onmouseover="changeIcon('over', 'icons/arrow-', this)" onmouseout="changeIcon('out', 'icons/arrow-', this)" src="img/icons/arrow-out.svg" width="35"></a>
     </span>
   </nav>
   <nav id="bullets">
@@ -251,6 +252,14 @@ fluo.com.mx
     </a>
     <img src="img/potet/s-1-full.png">
     <div id="swipeSliderMob"></div>
+    <div id="arrowPopMobile">
+      <a role="button" onclick="arrowPopSlider('prev')">
+        <img onmouseover="changeIcon('over', 'icons/arrow-', this);" onmouseout="changeIcon('out', 'icons/arrow-', this);" src="img/icons/arrow-out.svg" width="35">
+      </a>
+      <a role="button" onclick="arrowPopSlider('next')">
+        <img class="rotIcon" onmouseover="changeIcon('over', 'icons/arrow-', this);" onmouseout="changeIcon('out', 'icons/arrow-', this);" src="img/icons/arrow-out.svg" width="35">
+      </a>
+    </div>
   </div>
   <!-- AUDIO -->
   <audio id="logoSound" class="audio">
