--- a/section-tlayolis.html
+++ b/section-tlayolis.html
@@ -246,6 +246,14 @@ fluo.com.mx
       </a>
     </div>
     <img id="popSliderImg" src="img/tlayolis/s-1-full.png">
+    <div id="arrowPopDesk">
+      <a role="button" onclick="arrowPopDesk('prev')">
+        <img onmouseover="changeIcon('over', 'icons/arrow-', this);" onmouseout="changeIcon('out', 'icons/arrow-', this);" src="img/icons/arrow-out.svg" width="35">
+      </a>
+      <a role="button" onclick="arrowPopDesk('next')">
+        <img class="rotIcon" onmouseover="changeIcon('over', 'icons/arrow-', this);" onmouseout="changeIcon('out', 'icons/arrow-', this);" src="img/icons/arrow-out.svg" width="35">
+      </a>
+    </div>
   </div>
   <!-- POP SLIDER MOB -->
   <div id="popSliderMob" class="hideDisplay" style="background-image:url('img/tlayolis/background-tlayolis-producto-mobile.jpg');">
