--- a/section-potet.html
+++ b/section-potet.html
@@ -1,7 +1,7 @@
 <!--
 Yot Mx
-v2.5
-10 de Mayo 2018
+v2.8
+3 de Junio 2018
 [FLUO]
 info@fluo.com.mx
 fluo.com.mx
@@ -351,7 +351,7 @@ fluo.com.mx
     sliderFun();
   }else{
     setRefSliderPop('1','potet');
-    detectswipe('swipeSliderMob', swipePopMob);
+    // detectswipe('swipeSliderMob', swipePopMob);
   }
   </script>
 </body>
