--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!--
 Yot Mx
-v2.5
-10 de Mayo 2018
+v2.8
+3 de Junio 2018
 [FLUO]
 info@fluo.com.mx
 fluo.com.mx
@@ -195,7 +195,7 @@ fluo.com.mx
       countLoading();
       setPhone();
       // evtArrowIndex();
-      detectswipe('mainIndex', swipeTransformIndex);
+      // detectswipe('mainIndex', swipeTransformIndex);
       // preventSwipe();
       updateBackHeight();
     }
