--- a/section-sot.html
+++ b/section-sot.html
@@ -1,7 +1,7 @@
 <!--
 Yot Mx
 v2.8
-22 de Mayo 2018
+3 de Junio 2018
 [FLUO]
 info@fluo.com.mx
 fluo.com.mx
@@ -351,7 +351,7 @@ fluo.com.mx
       sliderFun();
     }else{
       setRefSliderPop('1','sot');
-      detectswipe('swipeSliderMob', swipePopMob);
+      // detectswipe('swipeSliderMob', swipePopMob);
     }
 
   </script>
